# QtQuickStudy

./: LICENSE  README.md
00.BasicComponent-Image/: BasicComponent-Image.qml
00.BasicComponent-Item/: BasicComponent-Item.qml  MyImageTextItem.qml
00.BasicComponent-Text/: BasicComponent-Text.qml  BasicComponent-Text.qmlproject
01.AnchorsLayout/: AnchorsLayout.qmlproject
02.Positioner-Flow/: Positioner-Flow.qml
02.Positioner-Grid/: Positioner-Grid.qmlproject
02.Positioner-Row/: Positioner-Row.qmlproject
03.KeyboardInput-Focus/: KeyboardInput-Focus.qml  KeyboardInput-Focus.qmlproject  MyFocusIndecator.qml
03.KeyboardInput-TextInput/: KeyboardInput-TextInput.qmlproject
04.Animation-AnimationGroup/: Animation-AnimationGroup.qml  Animation-AnimationGroup.qmlproject
04.Animation-EasingCurve/: ClickableEasingType.qml
04.Animation-GettingStarted/: Animation-GettingStarted.qml
04.Animation-Triggering/: Animation-Triggering.qml  Animation-Triggering.qmlproject
05.Application-Desktop/: CMakeLists.txt  main.cpp  main.qml
05.Application-DocumentWindows/: Application-DocumentWindows.qml  Application-DocumentWindows.qmlproject  DocumentWindow.qml
05.Application-Mobile/: main.qml
05.Application-NestedScreens/: Application-NestedScreens.qml  Application-NestedScreens.qmlproject  HomePage.qml  SettingsPage.qml
05.Application-ShareCommonCode/: CMakeLists.txt  CommonPart.qml  ImageViewerWindow.qml  main.cpp
05.Application-ShareCommonCode/+android/: ImageViewerWindow.qml
05.Application-Side-by-Side-Screens/: AboutPage.qml  HomePage.qml  SettingsPage.qml
06.Model-View-Animated-Delegate/: Model-View-Animated-Delegate.qml  Model-View-Animated-Delegate.qmlproject
06.Model-View-GridView/: Model-View-GridView.qml  Model-View-GridView.qmlproject
06.Model-View-ListView/: Model-View-ListView.qml  Model-View-ListView.qmlproject
06.Model-View-Repeater/: Model-View-Repeater.qml  Model-View-Repeater.qmlproject
AnchorsLayout/: AnchorsLayout.qml
Animation-EasingCurve/: AnimaDemonstrator.qml  Animation-EasingCurve.qml  Animation-EasingCurve.qmlproject
Animation-GettingStarted/: Animation-GettingStarted.qmlproject
Animation-Triggering/: Animation-Triggering.qml  ClickableImage.qml
Application-DocumentWindows/: Application-DocumentWindows.qml  DocumentWindow.qml
Application-Mobile/: CMakeLists.txt  main.cpp  main.qml
Application-Side-by-Side-Screens/: Application-Side-by-Side-Screens.qml  Application-Side-by-Side-Screens.qmlproject
BasicComponent/: BasicComponent.qml  BasicComponent.qmlproject
BasicComponent-Image/: BasicComponent-Image.qml  BasicComponent-Image.qmlproject
BasicComponent-Item/: BasicComponent-Item.qml  BasicComponent-Item.qmlproject  MyImageTextItem.qml
KeyboardInput-KeyEvent/: KeyboardInput-KeyEvent.qml  KeyboardInput-KeyEvent.qmlproject
KeyboardInput-TextInput/: KeyboardInput-TextInput.qml  MyFramedTextInput.qml
Model-View-ListView/: Model-View-ListView.qml
Positioner-Flow/: MyRandColorRect.qml  Positioner-Flow.qmlproject
Positioner-Grid/: Positioner-Grid.qml
Positioner-Row/: MyRandColorRect.qml  Positioner-Row.qml
Utils/: ClickableImage.qml
